--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div class="jumbotron">
       <h1 class="display-4">Max's website boilerplate code</h1>
       <p class="lead">
-        This is a barebone website
+        This is a barebone website to quickly publish your own website or try out different front-end components and libraries &#x1F63B
       </p>
       <hr class="my-4" />
       <p>
         It uses Boostrap, jQuery, and other libraries
       </p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Clone code from GitHub.com</a>
+        <a class="btn btn-success btn-lg" href="https://github.com/socraticDevBlog/website-boilerplate" target="_blank" role="button">Clone code from GitHub.com</a>
       </p>
     </div>
 
