adding secondary page

--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -18,8 +18,8 @@
   crossorigin="anonymous"
 ></script>
 
-<footer class="footer">
+<footer class="footer mt-5">
   <div class="container">
-    <span class="text-muted">socraticDev's studio 2020</span>
+    <span class="text-muted">users know to look for useful links on a sticky footer available on every page</span>
   </div>
 </footer>
