--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
       </p>
     </div>
 
-    <div class="row ml-4 mr-4">
+    <div class="row m-4">
       <div class="col-sm-4 d-flex align-items-stretch">
         <div class="card" style="width: 18rem;">
+          <a href="secondary.html">
           <img
             class="card-img-top"
             src="images/form.png"
             alt="Card image cap"
           />
+        </a>
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Filling out forms</h5>
-            <p class="card-text">come to play with form inputs' elements</p>
-            <a href="#" class="btn btn-outline-primary mt-auto btn-sm mt-auto ml-5 mr-5">Go!</a>
+            <h5 class="card-title">a specific secondary page</h5>
+            <p class="card-text">I'm baby seitan vice sunt, aesthetic ennui banjo pickled deserunt freegan excepteur exercitation.</p>
+            <a href="secondary.html" class="btn btn-outline-primary mt-auto btn-sm mt-auto ml-5 mr-5">Go!</a>
           </div>
         </div>
       </div>
@@ -53,9 +55,9 @@
             alt="Card image cap"
           />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Data Visualization</h5>
-            <p class="card-text">make a statement thru data viz</p>
-            <a href="#" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
+            <h5 class="card-title">a second card</h5>
+            <p class="card-text">Quinoa taxidermy tattooed literally tilde.</p>
+            <a href="#" class="disabled btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
           </div>
         </div>
       </div>
@@ -67,17 +69,15 @@
             alt="Card image cap"
           />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">UI testing</h5>
+            <h5 class="card-title">a third card</h5>
             <p class="card-text">
-              because you are not the end-user: develop different user
-              experiences
+              Gastropub flexitarian narwhal, unicorn biodiesel flannel kinfolk kombucha food truck trust fund.
             </p>
-            <a href="#" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
+            <a href="#" class="disabled btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
           </div>
         </div>
       </div>
     </div>
-
     <sergey-import src="footer" />
   </body>
 </html>
