--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -18,8 +18,11 @@
   crossorigin="anonymous"
 ></script>
 
-<footer class="footer mt-5">
+<footer class="footer">
   <div class="container">
-    <span class="text-muted">users know to look for useful links on a sticky footer available on every page</span>
+    <p class="text-muted">
+      users know to look for useful links on a sticky footer available on every
+      page
+    </p>
   </div>
 </footer>
