--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </p>
     <![endif]-->
     <sergey-import src="navbar" />
-    <div class="jumbotron">
+    <div class="jumbotron custom-jumbotron">
       <h1 class="display-4">Max's website boilerplate code</h1>
       <p class="lead">
         This is a barebone website to quickly publish your own website or try out different front-end components and libraries &#x1F63B
