adding datatable jquery UI

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             alt="Card image cap"
           />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">a second card</h5>
-            <p class="card-text">Quinoa taxidermy tattooed literally tilde.</p>
-            <a href="#" class="disabled btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
+            <h5 class="card-title">datatables</h5>
+            <p class="card-text">datatables' testing ground</p>
+            <a href="datatable.html" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
           </div>
         </div>
       </div>
