--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <div class="card" style="width: 18rem;">
           <img
             class="card-img-top"
-            src="images/display-data.png"
+            src="images/datatable.png"
             alt="Card image cap"
           />
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">datatables</h5>
-            <p class="card-text">datatables' testing ground</p>
+            <h5 class="card-title">jQuery UI DataTable plugin</h5>
+            <p class="card-text">DataTable's testing ground</p>
             <a href="datatable.html" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
           </div>
         </div>
