adding overflow word-break page

--- a/datatable.html
+++ b/datatable.html
@@ -1,5 +1,6 @@
 <html>
 <sergey-import src="head" />
+<link rel="stylesheet" href="jquery.dataTables.min.css" />
 
 <body>
     <sergey-import src="navbar" />
