--- a/index.html
+++ b/index.html
@@ -4,80 +4,76 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
-  <!--<![endif]-->
+<!--<![endif]-->
 
-  <sergey-import src="head" />
+<sergey-import src="head" />
 
-  <body>
-    <!--[if lt IE 7]>
+<body>
+  <!--[if lt IE 7]>
       <p class="browsehappy">
         You are using an <strong>outdated</strong> browser. Please
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <sergey-import src="navbar" />
-    <div class="jumbotron custom-jumbotron">
-      <h1 class="display-4">Max's website boilerplate code</h1>
-      <p class="lead">
-        This is a barebone website to quickly publish your own website or try out different front-end components and libraries &#x1F63B
-      </p>
-      <hr class="my-4" />
-      <p>
-        It uses Boostrap, jQuery, and other libraries
-      </p>
-      <p class="lead">
-        <a class="btn btn-success btn-lg" href="https://github.com/socraticDevBlog/website-boilerplate" target="_blank" role="button">Clone code from GitHub.com</a>
-      </p>
-    </div>
+  <sergey-import src="navbar" />
+  <div class="jumbotron custom-jumbotron">
+    <h1 class="display-4">Max's website boilerplate code</h1>
+    <p class="lead">
+      This is a barebone website to quickly publish your own website or try out different front-end components and
+      libraries &#x1F63B
+    </p>
+    <hr class="my-4" />
+    <p>
+      It uses Boostrap, jQuery, and other libraries
+    </p>
+    <p class="lead">
+      <a class="btn btn-success btn-lg" href="https://github.com/socraticDevBlog/website-boilerplate" target="_blank"
+        role="button">Clone code from GitHub.com</a>
+    </p>
+  </div>
 
-    <div class="row m-4">
-      <div class="col-sm-4 d-flex align-items-stretch">
-        <div class="card" style="width: 18rem;">
-          <a href="secondary.html">
-          <img
-            class="card-img-top"
-            src="images/form.png"
-            alt="Card image cap"
-          />
+  <div class="row m-4">
+    <div class="col-sm-4 d-flex align-items-stretch">
+      <div class="card" style="width: 18rem;">
+        <a href="secondary.html">
+          <img class="card-img-top" src="images/form.png" alt="Card image cap" />
         </a>
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">a specific secondary page</h5>
-            <p class="card-text">I'm baby seitan vice sunt, aesthetic ennui banjo pickled deserunt freegan excepteur exercitation.</p>
-            <a href="secondary.html" class="btn btn-outline-primary mt-auto btn-sm mt-auto ml-5 mr-5">Go!</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 d-flex align-items-stretch">
-        <div class="card" style="width: 18rem;">
-          <img
-            class="card-img-top"
-            src="images/datatable.png"
-            alt="Card image cap"
-          />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">jQuery UI DataTable plugin</h5>
-            <p class="card-text">DataTable's testing ground</p>
-            <a href="datatable.html" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 d-flex align-items-stretch">
-        <div class="card" style="width: 18rem;">
-          <img
-            class="card-img-top"
-            src="images/ui-testing.png"
-            alt="Card image cap"
-          />
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">a third card</h5>
-            <p class="card-text">
-              Gastropub flexitarian narwhal, unicorn biodiesel flannel kinfolk kombucha food truck trust fund.
-            </p>
-            <a href="#" class="disabled btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
-          </div>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">a specific secondary page</h5>
+          <p class="card-text">I'm baby seitan vice sunt, aesthetic ennui banjo pickled deserunt freegan excepteur
+            exercitation.</p>
+          <a href="secondary.html" class="btn btn-outline-primary mt-auto btn-sm mt-auto ml-5 mr-5">Go!</a>
         </div>
       </div>
     </div>
-    <sergey-import src="footer" />
-  </body>
+    <div class="col-sm-4 d-flex align-items-stretch">
+      <div class="card" style="width: 18rem;">
+        <a href="datatable.html">
+        <img class="card-img-top" src="images/datatable.png" alt="Card image cap" />
+        </a>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">jQuery UI DataTable plugin</h5>
+          <p class="card-text">DataTable's testing ground</p>
+          <a href="datatable.html" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 d-flex align-items-stretch">
+      <div class="card" style="width: 18rem;">
+        <a href="word-wrap.html">
+          <img class="card-img-top" src="images/word-break.png" alt="Card image cap" />
+        </a>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">Overflow word-wrap</h5>
+          <p class="card-text">
+            Different ways to break words
+          </p>
+          <a href="word-wrap.html" class="btn btn-outline-primary btn-sm mt-auto ml-5 mr-5">Go!</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <sergey-import src="footer" />
+</body>
+
 </html>
