adding grid system page

--- a/datatable.html
+++ b/datatable.html
@@ -5,7 +5,7 @@
 <body>
     <sergey-import src="navbar" />
     <div class="container">
-        <!-- page-header doesnt exist in Boostrap v4 -->
+        <!-- page-header doesnt exist in Bootstrap v4 -->
         <div class="pb-2 mt-4 mb-2 border-bottom">
             <h1>datatables' playground</h1>
         </div>
