--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </p>
     <hr class="my-4" />
     <p>
-      It uses Boostrap, jQuery, and other libraries
+      It uses Bootstrap, jQuery, and other libraries
     </p>
     <p class="lead">
       <a class="btn btn-success btn-lg" href="https://github.com/socraticDevBlog/website-boilerplate" target="_blank"
@@ -35,14 +35,13 @@
   <div class="row m-4">
     <div class="col-sm-4 d-flex align-items-stretch">
       <div class="card" style="width: 18rem;">
-        <a href="secondary.html">
+        <a href="grid-system.html">
           <img class="card-img-top" src="images/form.png" alt="Card image cap" />
         </a>
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title">a specific secondary page</h5>
-          <p class="card-text">I'm baby seitan vice sunt, aesthetic ennui banjo pickled deserunt freegan excepteur
-            exercitation.</p>
-          <a href="secondary.html" class="btn btn-outline-primary mt-auto btn-sm mt-auto ml-5 mr-5">Go!</a>
+          <h5 class="card-title">Bootstrap Responsive Grid System</h5>
+          <p class="card-text">Use our powerful mobile-first flexbox grid to build layouts of all shapes and sizes thanks to a twelve column system, five default responsive tiers</p>
+          <a href="grid-system.html" class="btn btn-outline-primary mt-auto btn-sm mt-auto ml-5 mr-5">Go!</a>
         </div>
       </div>
     </div>
