--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -12,7 +12,7 @@
   crossorigin="anonymous"
 ></script>
 
-<!-- latest boostrap JS -->
+<!-- latest bootstrap JS -->
 <script
   src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
   crossorigin="anonymous"
