--- a/grid-system.html
+++ b/grid-system.html
@@ -8,8 +8,10 @@
       <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>Bootstrap Grid System</h1>
       </div>
-      <p>Bootstrap grid system helps you divide the page into rows and columns. Think about old time newspaper layouts.
-        Learning a responsive CSS grid system will bring you to another level as a front-end developer!
+      <p>
+        Bootstrap grid system helps you divide the page into rows and columns.
+        Think about old time newspaper layouts. Learning a responsive CSS grid
+        system will bring you to another level as a front-end developer!
       </p>
 
       <div class="row">
@@ -19,14 +21,7 @@
             roll gummies brownie tiramisu wafer. Cake pastry soufflé dessert
             gingerbread soufflé cake ice cream biscuit. Jelly cake ice cream
             chupa chups sweet roll halvah. Chocolate cookie gummies chocolate
-            cake dessert jelly beans. Brownie sweet roll I love croissant. I
-            love pudding chocolate cake I love candy I love cookie donut
-            topping. Cotton candy I love marzipan fruitcake pudding I love I
-            love danish. Lollipop chocolate bar cheesecake. Gummies chocolate
-            bar lollipop apple pie macaroon macaroon sugar plum. I love tiramisu
-            chocolate bar gummi bears. Sweet roll wafer donut cake. Candy
-            lollipop biscuit oat cake gummi bears cake. Donut gingerbread candy
-            I love jelly beans oat cake.
+            cake dessert jelly beans.
           </p>
           <div class="row">
             <div class="col-md-4">
@@ -34,15 +29,7 @@
                 I love macaroon macaroon. Pudding I love tootsie roll cake
                 brownie pastry soufflé sweet. Cake apple pie candy canes powder.
                 Chocolate cake pie I love halvah ice cream. Cake I love cake
-                pudding jelly beans cheesecake. Sugar plum I love dessert
-                gingerbread sugar plum tart macaroon gummies. Wafer marzipan
-                liquorice bear claw jelly beans danish liquorice toffee
-                cheesecake. Bonbon donut I love I love fruitcake. Tootsie roll
-                danish I love marzipan I love gummies gingerbread. Donut
-                chocolate sugar plum I love chocolate cake I love. Bonbon I love
-                jelly-o cotton candy bonbon pudding cheesecake I love.
-                Cheesecake pie cupcake topping gummies fruitcake carrot cake.
-                Lollipop tart chocolate jelly beans. Candy cake donut bonbon.
+                pudding jelly beans cheesecake.
               </p>
             </div>
             <div class="col-md-4">
@@ -50,16 +37,7 @@
                 I love croissant chocolate cake. Topping pie pie. Sugar plum
                 gummies tiramisu cake I love bonbon. Topping cake jelly beans
                 powder oat cake oat cake cake. Chocolate pie sugar plum I love
-                toffee donut topping lollipop jelly beans. Biscuit cheesecake
-                cotton candy gummi bears marshmallow candy muffin candy canes
-                sweet roll. Pudding danish gummi bears fruitcake bear claw
-                muffin muffin icing brownie. Cupcake I love I love jelly-o.
-                Gingerbread chocolate cake dessert pastry chocolate danish
-                caramels apple pie tart. Cookie I love I love dessert I love
-                cotton candy carrot cake donut. Dessert apple pie cookie.
-                Jelly-o cotton candy ice cream soufflé. Jelly chocolate cake
-                bonbon tootsie roll tart cake jelly beans. Wafer biscuit
-                liquorice.
+                toffee donut topping lollipop jelly beans.
               </p>
             </div>
             <div class="col-md-4">
@@ -67,16 +45,7 @@
                 Marzipan halvah cheesecake chocolate cake sesame snaps halvah.
                 Wafer cupcake chocolate cake I love brownie soufflé carrot cake
                 caramels brownie. I love tootsie roll gummi bears tiramisu
-                croissant fruitcake gummies caramels lollipop. Powder wafer
-                carrot cake dessert powder dragée chocolate bar I love halvah.
-                Lollipop I love I love gummies liquorice cake I love I love.
-                Pastry chocolate bar cookie bonbon jujubes gummi bears jelly
-                cookie. Biscuit gummies cake gummi bears. I love tootsie roll
-                tiramisu danish pastry. Lemon drops I love pudding bear claw
-                liquorice pastry pudding. Sweet cheesecake apple pie. Brownie
-                cake chupa chups jujubes cheesecake caramels wafer. Marshmallow
-                wafer candy canes topping cheesecake. Sweet pudding sweet
-                cookie.
+                croissant fruitcake gummies caramels lollipop.
               </p>
             </div>
           </div>
@@ -87,11 +56,7 @@
             snaps gummi bears pastry macaroon candy canes sweet roll. Jelly
             beans bear claw chupa chups. Liquorice chocolate cake biscuit candy
             I love I love icing. Gummi bears chupa chups candy dessert sweet
-            jelly beans. Powder oat cake sugar plum apple pie. Sweet tart
-            jelly-o I love I love. Ice cream danish gummi bears gummi bears
-            biscuit danish cookie cake. Marshmallow cake sweet roll oat cake.
-            Caramels tart bonbon I love tart carrot cake tiramisu. Topping I
-            love I love chupa chups.
+            jelly beans.
           </p>
         </div>
         <div class="col-md-7">
@@ -104,22 +69,7 @@
             denique Martiis nascetur repente provincia. Novitates autem si spem
             adferunt, ut tamquam in herbis non fallacibus fructus appareat, non
             sunt illae quidem repudiandae, vetustas tamen suo loco conservanda;
-            maxima est enim vis vetustatis et consuetudinis. Quin in ipso equo,
-            cuius modo feci mentionem, si nulla res impediat, nemo est, quin eo,
-            quo consuevit, libentius utatur quam intractato et novo. Nec vero in
-            hoc quod est animal, sed in iis etiam quae sunt inanima, consuetudo
-            valet, cum locis ipsis delectemur, montuosis etiam et silvestribus,
-            in quibus diutius commorati sumus. Altera sententia est, quae
-            definit amicitiam paribus officiis ac voluntatibus. Hoc quidem est
-            nimis exigue et exiliter ad calculos vocare amicitiam, ut par sit
-            ratio acceptorum et datorum. Divitior mihi et affluentior videtur
-            esse vera amicitia nec observare restricte, ne plus reddat quam
-            acceperit; neque enim verendum est, ne quid excidat, aut ne quid in
-            terram defluat, aut ne plus aequo quid in amicitiam congeratur. Ut
-            enim quisque sibi plurimum confidit et ut quisque maxime virtute et
-            sapientia sic munitus est, ut nullo egeat suaque omnia in se ipso
-            posita iudicet, ita in amicitiis expetendis colendisque maxime
-            excellit. Quid enim? Africanus indigens mei? Minime hercule!
+            maxima est enim vis vetustatis et consuetudinis.
           </p>
           <div class="row">
             <div class="col-md-6">
@@ -130,22 +80,6 @@
                 quamquam utilitates multae et magnae consecutae sunt, non sunt
                 tamen ab earum spe causae diligendi profectae.
               </p>
-              <p>
-                Postremo ad id indignitatis est ventum, ut cum peregrini ob
-                formidatam haut ita dudum alimentorum inopiam pellerentur ab
-                urbe praecipites, sectatoribus disciplinarum liberalium inpendio
-                paucis sine respiratione ulla extrusis, tenerentur minimarum
-                adseclae veri, quique id simularunt ad tempus, et tria milia
-                saltatricum ne interpellata quidem cum choris totidemque
-                remanerent magistris. Pandente itaque viam fatorum sorte
-                tristissima, qua praestitutum erat eum vita et imperio spoliari,
-                itineribus interiectis permutatione iumentorum emensis venit
-                Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum
-                latebrae omnes, et Barbatio repente apparuit comes, qui sub eo
-                domesticis praefuit, cum Apodemio agente in rebus milites
-                ducens, quos beneficiis suis oppigneratos elegerat imperator
-                certus nec praemiis nec miseratione ulla posse deflecti.
-              </p>
             </div>
             <div class="col-md-6">
               <p>
@@ -155,12 +89,7 @@
                 patiebatur optimi adulescentis in tali illum oratione versari.
                 Vellem aliquis ex vobis robustioribus hunc male dicendi locum
                 suscepisset; aliquanto liberius et fortius et magis more nostro
-                refutaremus istam male dicendi licentiam. Tecum, Atratine, agam
-                lenius, quod et pudor tuus moderatur orationi meae et meum erga
-                te parentemque tuum beneficium tueri debeo. Et eodem impetu
-                Domitianum praecipitem per scalas itidem funibus constrinxerunt,
-                eosque coniunctos per ampla spatia civitatis acri raptavere
-                discursu.
+                refutaremus istam male dicendi licentiam.
               </p>
             </div>
             <p>
@@ -173,88 +102,41 @@
               publicae tuis vel doloribus vel suspicionibus anteferre. Ille
               quidem fructum omnis ante actae vitae hodierno die maximum cepit,
               cum summo consensu senatus, tum iudicio tuo gravissimo et maximo.
-              Ex quo profecto intellegis quanta in dato beneficio sit laus, cum
-              in accepto sit tanta gloria. Cuius acerbitati uxor grave
-              accesserat incentivum, germanitate Augusti turgida supra modum,
-              quam Hannibaliano regi fratris filio antehac Constantinus iunxerat
-              pater, Megaera quaedam mortalis, inflammatrix saevientis adsidua,
-              humani cruoris avida nihil mitius quam maritus; qui paulatim
-              eruditiores facti processu temporis ad nocendum per clandestinos
-              versutosque rumigerulos conpertis leviter addere quaedam male
-              suetos falsa et placentia sibi discentes, adfectati regni vel
-              artium nefandarum calumnias insontibus adfligebant. Martinus agens
-              illas provincias pro praefectis aerumnas innocentium graviter
-              gemens saepeque obsecrans, ut ab omni culpa inmunibus parceretur,
-              cum non inpetraret, minabatur se discessurum: ut saltem id metuens
-              perquisitor malivolus tandem desineret quieti coalitos homines in
-              aperta pericula proiectare. Orientis vero limes in longum
-              protentus et rectum ab Euphratis fluminis ripis ad usque
-              supercilia porrigitur Nili, laeva Saracenis conterminans gentibus,
-              dextra pelagi fragoribus patens, quam plagam Nicator Seleucus
-              occupatam auxit magnum in modum, cum post Alexandri Macedonis
-              obitum successorio iure teneret regna Persidis, efficaciae
-              inpetrabilis rex, ut indicat cognomentum. Et quoniam mirari posse
-              quosdam peregrinos existimo haec lecturos forsitan, si contigerit,
-              quamobrem cum oratio ad ea monstranda deflexerit quae Romae
-              gererentur, nihil praeter seditiones narratur et tabernas et
-              vilitates harum similis alias, summatim causas perstringam nusquam
-              a veritate sponte propria digressurus. Novo denique perniciosoque
-              exemplo idem Gallus ausus est inire flagitium grave, quod Romae
-              cum ultimo dedecore temptasse aliquando dicitur Gallienus, et
-              adhibitis paucis clam ferro succinctis vesperi per tabernas
-              palabatur et conpita quaeritando Graeco sermone, cuius erat
-              inpendio gnarus, quid de Caesare quisque sentiret. et haec
-              confidenter agebat in urbe ubi pernoctantium luminum claritudo
-              dierum solet imitari fulgorem. postremo agnitus saepe iamque, si
-              prodisset, conspicuum se fore contemplans, non nisi luce palam
-              egrediens ad agenda quae putabat seria cernebatur. et haec quidem
-              medullitus multis gementibus agebantur. Thalassius vero ea
-              tempestate praefectus praetorio praesens ipse quoque adrogantis
-              ingenii, considerans incitationem eius ad multorum augeri
-              discrimina, non maturitate vel consiliis mitigabat, ut aliquotiens
-              celsae potestates iras principum molliverunt, sed adversando
-              iurgandoque cum parum congrueret, eum ad rabiem potius evibrabat,
-              Augustum actus eius exaggerando creberrime docens, idque, incertum
-              qua mente, ne lateret adfectans. quibus mox Caesar acrius
-              efferatus, velut contumaciae quoddam vexillum altius erigens, sine
-              respectu salutis alienae vel suae ad vertenda opposita instar
-              rapidi fluminis irrevocabili impetu ferebatur.
             </p>
           </div>
         </div>
-        <p>
-          Circa hos dies Lollianus primae lanuginis adulescens, Lampadi filius
-          ex praefecto, exploratius causam Maximino spectante, convictus
-          codicem noxiarum artium nondum per aetatem firmato consilio
-          descripsisse, exulque mittendus, ut sperabatur, patris inpulsu
-          provocavit ad principem, et iussus ad eius comitatum duci, de fumo,
-          ut aiunt, in flammam traditus Phalangio Baeticae consulari cecidit
-          funesti carnificis manu. Cognitis enim pilatorum caesorumque
-          funeribus nemo deinde ad has stationes appulit navem, sed ut
-          Scironis praerupta letalia declinantes litoribus Cypriis contigui
-          navigabant, quae Isauriae scopulis sunt controversa.
-        </p>
-        <p>
-          Inter quos Paulus eminebat notarius ortus in Hispania, glabro quidam
-          sub vultu latens, odorandi vias periculorum occultas perquam sagax.
-          is in Brittanniam missus ut militares quosdam perduceret ausos
-          conspirasse Magnentio, cum reniti non possent, iussa licentius
-          supergressus fluminis modo fortunis conplurium sese repentinus
-          infudit et ferebatur per strages multiplices ac ruinas, vinculis
-          membra ingenuorum adfligens et quosdam obterens manicis, crimina
-          scilicet multa consarcinando a veritate longe discreta. unde
-          admissum est facinus impium, quod Constanti tempus nota inusserat
-          sempiterna. Quae dum ita struuntur, indicatum est apud Tyrum
-          indumentum regale textum occulte, incertum quo locante vel cuius
-          usibus apparatum. ideoque rector provinciae tunc pater Apollinaris
-          eiusdem nominis ut conscius ductus est aliique congregati sunt ex
-          diversis civitatibus multi, qui atrocium criminum ponderibus
-          urgebantur. Duplexque isdem diebus acciderat malum, quod et
-          Theophilum insontem atrox interceperat casus, et Serenianus dignus
-          exsecratione cunctorum, innoxius, modo non reclamante publico
-          vigore, discessit.
-        </p>
+        <div class="row">
+          <div class="col-md-6">
+            <p>
+              Circa hos dies Lollianus primae lanuginis adulescens, Lampadi
+              filius ex praefecto, exploratius causam Maximino spectante,
+              convictus codicem noxiarum artium nondum per aetatem firmato
+              consilio descripsisse, exulque mittendus, ut sperabatur, patris
+              inpulsu provocavit ad principem, et iussus ad eius comitatum duci,
+              de fumo, ut aiunt, in flammam traditus Phalangio Baeticae
+              consulari cecidit funesti carnificis manu.
+            </p>
+          </div>
+          <div class="col-md-6">
+            <p>
+              Cognitis enim pilatorum caesorumque funeribus nemo deinde ad has
+              stationes appulit navem, sed ut Scironis praerupta letalia
+              declinantes litoribus Cypriis contigui navigabant, quae Isauriae
+              scopulis sunt controversa.
+            </p>
+          </div>
+        </div>
       </div>
+      <p>
+        Inter quos Paulus eminebat notarius ortus in Hispania, glabro quidam sub
+        vultu latens, odorandi vias periculorum occultas perquam sagax. is in
+        Brittanniam missus ut militares quosdam perduceret ausos conspirasse
+        Magnentio, cum reniti non possent, iussa licentius supergressus fluminis
+        modo fortunis conplurium sese repentinus infudit et ferebatur per
+        strages multiplices ac ruinas, vinculis membra ingenuorum adfligens et
+        quosdam obterens manicis, crimina scilicet multa consarcinando a
+        veritate longe discreta.
+      </p>
     </div>
 
     <sergey-import src="footer" />
