--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="col-sm-4 d-flex align-items-stretch">
       <div class="card" style="width: 18rem;">
         <a href="grid-system.html">
-          <img class="card-img-top" src="images/form.png" alt="Card image cap" />
+          <img class="card-img-top" src="images/gridSystem.png" alt="Card image cap" />
         </a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">Bootstrap Responsive Grid System</h5>
