--- a/datatable.html
+++ b/datatable.html
@@ -29,35 +29,35 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Row 1 Data 2</td>
+                        <td>Zombie ipsum</td>
                         <td>Row 1 Data 3</td>
                         <td>Row 1 Data 4</td>
                         <td>Row 1 Data 5</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Row 2 Data 2</td>
+                        <td>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia?</td>
                         <td>Row 2 Data 3</td>
                         <td>Row 2 Data 4</td>
                         <td>Row 2 Data 5</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Row 3 Data 2</td>
+                        <td>Zombie ipsum</td>
                         <td>Row 3 Data 3</td>
                         <td>Row 3 Data 4</td>
                         <td>Row 3 Data 5</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Row 4 Data 2</td>
+                        <td>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia?</td>
                         <td>Row 4 Data 3</td>
                         <td>Row 4 Data 4</td>
                         <td>Row 4 Data 5</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>Row 5 Data 2</td>
+                        <td>Zombie ipsum</td>
                         <td>Row 5 Data 3</td>
                         <td>Row 5 Data 4</td>
                         <td>Row 5 Data 5</td>
@@ -65,7 +65,7 @@
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>Row 6 Data 2</td>
+                        <td>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia?</td>
                         <td>Row 6 Data 3</td>
                         <td>Row 6 Data 4</td>
                         <td>Row 6 Data 5</td>
@@ -73,7 +73,7 @@
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>Row 7 Data 2</td>
+                        <td>Zombie ipsum</td>
                         <td>Row 7 Data 3</td>
                         <td>Row 7 Data 4</td>
                         <td>Row 7 Data 5</td>
@@ -137,7 +137,8 @@
     <sergey-import src="footer" />
 </body>
 
-<script src="jquery.dataTables.min.js" crossorigin="anonymous"></script>
-<script src="site-datatable.js" crossorigin="anonymous"></script>
+<script src="jquery.dataTables.min.js"></script>
+<script src="ellipsis.js"></script>
+<script src="site-datatable.js"></script>
 
 </html>
